[package]
name = "font-loader"
version = "0.2.0"
authors = ["MSleepyPanda <m.sleepypanda@gmail.com>"]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/font-loader/"
homepage = "https://github.com/MSleepyPanda/rust-font-loader"
repository = "https://github.com/MSleepyPanda/rust-font-loader"
keywords = ["font", "loading","loader", "wingdi", "fontconfig"]
description = "A font loading utility written in and for rust."

[dependencies]
libc = "0.2.15"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
user32-sys = "0.2"
gdi32-sys = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "4.0.0"
core-foundation = "0.3.0"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
servo-fontconfig = {git = "https://github.com/MSleepyPanda/rust-fontconfig", rev = "ef1c591", default-features = false}
