[package]
name = "font-loader"
version = "0.11.0"
authors = ["MSleepyPanda <m.sleepypanda@gmail.com>"]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/font-loader/"
homepage = "https://github.com/matprec/rust-font-loader"
repository = "https://github.com/matprec/rust-font-loader"
keywords = ["font", "loading","loader", "wingdi", "fontconfig"]
description = "A font loading utility written in and for Rust."

[dependencies]
libc = "0.2.15"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", default-features = false, features = ["winuser", "wingdi"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "19"
core-foundation = "0.9"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
servo-fontconfig = "0.5.0"
